--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        </title>OneChlorine.github.io</title>
+        </title>Here, you will find something interesting.(Although There is nothing here.:D) If I have some items in the future, I will create a direct link on this page.</title>
     </head>
     <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
+        <h1>Nothing here right now! Haha! Because I have no items at present! But it doesn't mean that I won't have my own repositories later.</h1>
+        <p>Expecting my future repositories.</p>
     </body>
 </html>
