--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <body>
         <h1>Nothing here right now! Haha! Because I have no items at present! But it doesn't mean that I won't have my own repositories later.</h1>
         <p>Expecting my future repositories.</p>
-        <p>(By the way, my email address: feizhenyang123@gmail.com)</p>
+        <p>(By the way, my email address: <link>feizhenyang123@gmail.com)</p>
     </body>
 </html>
