--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <body>
         <h1>Nothing here right now! Haha! Because I have no items at present! But it doesn't mean that I won't have my own repositories later.</h1>
         <p>Expecting my future repositories.</p>
-        <p>(By the way, my email address: <a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com</a>)</p>
+        <p>(By the way, my email address: <a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com.</a> If you like, I can provide you my senior's homepage of GitHub: <a href="https://aarwoo.github.io"https://aarwoo.github.io.</a>)</p>
     </body>
 </html>
