--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Nothing here right now! Haha! Because I have no items at present! But it doesn't mean that I won't have my own repositories later.</h1>
-        <p>Expecting my future repositories. And I can have my indepedent projects.</p>
+        <p>Expecting my future repositories.</p>
         <p>(By the way, my email address: <a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com.</a>)</p>
         <p>(If you necessary, you can visit my Senior's homepage of GitHub via this page: <a href="https://aarwoo.github.io">https://aarwoo.github.io</a>)</p>
     </body>
