--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <body>
         <h1>Nothing here right now! Haha! Because I have no items at present! But it doesn't mean that I won't have my own repositories later.</h1>
         <p>Expecting my future repositories.</p>
-        <p>(By the way, this is my email address: <a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com.</a>)</p>
-        <p>(If you necessary, you can visit my Senior's homepage of GitHub (<a href="https://aarwoo.github.io" target="_blank">https://aarwoo.github.io</a>) via this page)</p>
+        <p>(By the way, this is my email address: <a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com</a>.)</p>
+        <p>(If you necessary, you can visit my Senior's homepage of GitHub (<a href="https://aarwoo.github.io" target="_blank">https://aarwoo.github.io</a>) via my homepage)</p>
         <p>©OneChlorine 2020 <a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a></p>
     </body>
 </html>
