--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        </title>Here, you will find something interesting.(Although There is nothing here. :D) If I have some items in the future, I will create a direct link on this page.</title>
+        </title>OneChlorine</title>
+        <meta charset="utf-8"/>
     </head>
     <body>
-        <h1>Nothing here right now! Haha! Because I have no items at present! But it doesn't mean that I won't have my own repositories later.</h1>
+        <img src="‪D:\Personal Files\Pictures\Camera Roll\GP.svg"/>
+        <h1>Here, you will find something interesting.(Although There is nothing here. :D) If I have some items in the future, I will create a direct link on this page.</h1> 
+        <p>Nothing here right now! Haha! Because I have no items at present! But it doesn't mean that I won't have my own repositories later.</p>
         <p>Expecting my future repositories.</p>
         <p>(By the way, this is my email address: <a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com</a>.)</p>
         <p>(If you necessary, you can visit my Upperclassman's homepage of GitHub (<a href="https://aarwoo.github.io" target="_blank">https://aarwoo.github.io</a>) via my homepage)</p>
