--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8"/>
     </head>
     <body>
-        <img src="‪D:\Personal Files\Pictures\Camera Roll\GP.svg"/>
+        <img src="https://github.com/OneChlorine/OneChlorine.github.io/blob/master/GP.svg"/>
         <h1>Here, you will find something interesting.(Although There is nothing here. :D) If I have some items in the future, I will create a direct link on this page.</h1> 
         <p>Nothing here right now! Haha! Because I have no items at present! But it doesn't mean that I won't have my own repositories later.</p>
         <p>Expecting my future repositories.</p>
