--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <p>(If you necessary, you can visit my Upperclassman's homepage of GitHub (<a href="https://aarwoo.github.io" target="_blank">https://aarwoo.github.io</a>) via my homepage)</p>
         <p>©OneChlorine 2020 <a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a></p>
         <p>Last...Hum...I like watching animations, ESPECIALLY GG Bond! Aha! :D</p>
-        <img src="GP.svg"/>
+        <img src="GP.png"/>
     </body>
 </html>
