--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         <p>Expecting my future repositories.</p>
         <p>(By the way, this is my email address: <a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com</a>.)</p>
         <p>(If you necessary, you can visit my Upperclassman's homepage of GitHub (<a href="https://aarwoo.github.io" target="_blank">https://aarwoo.github.io</a>) via my homepage)</p>
-        <p>©OneChlorine 2020 <a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a></p>
+        <p>(My GitHub Homepage: <a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a>)</p>
         <p>(Last...Hum...I like watching animations, ESPECIALLY GG Bond! Aha! :D)</p>
         <img src="GP.png"/>
+        <p>©OneChlorine 2020</p>
     </body>
 </html>
