--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        </title>OneChlorine's personal repositories</title>
+        <title>OneChlorine's personal repositories</title>
         <meta charset="utf-8"/>
     </head>
     <body>
