--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p>(If you necessary, you can visit my Upperclassman's homepage of GitHub (<a href="https://aarwoo.github.io" target="_blank">https://aarwoo.github.io</a>) via my homepage)</p>
         <p>(My GitHub Homepage: <a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a>)</p>
         <p>(Last...Hum...I like watching animations, ESPECIALLY GG Bond! Aha! :D)</p>
-        <img src="GP.png"/>
+        <a href="GP/GP.html"><img src="GP.png"/></a>
         <p>©OneChlorine 2020</p>
     </body>
 </html>
