--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>OneChlorine's personal repositories</title>
+        <title>OneChlorine's Personal Repositories</title>
         <meta charset="utf-8"/>
     </head>
     <body>
@@ -9,8 +9,7 @@
         <p>Nothing here right now! Haha! Because I have no items at present! But it doesn't mean that I won't have my own repositories later.</p>
         <p>Expecting my future repositories.</p>
         <p>(By the way, this is my email address: <a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com</a>.)</p>
-        <p>(If you necessary, you can visit my Upperclassman's homepage of GitHub (<a href="https://aarwoo.github.io" target="_blank">https://aarwoo.github.io</a>) via my homepage)</p>
-        <p>(My GitHub Homepage: <a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a>)</p>
+        <p>(If you necessary, you can visit my Upperclassman's homepage of GitHub (<a href="https://aarwoo.github.io" target="_blank">https://aarwoo.github.io</a>) via my homepage. My GitHub Homepage: <a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a>.)</p>
         <p>(Last...Hum...I like watching animations, ESPECIALLY GG Bond! Aha!😂)</p>
         <a href="GP/GP.html"><img src="GP.png"/></a>
         <p>(Tell you a mystery: if you click the image above, you will enter a "NEW" word.😁)</p>
