--- a/GP/GP.html
+++ b/GP/GP.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>The Story Of GP</title>
+        <title>The Story of GP</title>
         <meta charset="utf-8"/>
     </head>
     <body>
