--- a/GP/GP.html
+++ b/GP/GP.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>The Story of GP</title>
+        <p>Aha! You have found my mystery! How fortunate you are!😃</p>
         <meta charset="utf-8"/>
     </head>
     <body>
