--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="shortcut icon" href=" /favicon.ico"/>
         <title>OneChlorine's Personal Repositories</title>
         <meta charset="utf-8"/>
     </head>
