--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="shortcut icon" href=" /favicon.ico" />
+        <link rel="icon" href="/favicon.ico"/>
+        <link rel="shortcut icon" href="/favicon.ico"/>
         <title>OneChlorine's Personal Repositories</title>
         <meta charset="utf-8"/>
     </head>
