--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="icon" href="https://raw.githubusercontent.com/OneChlorine/OneChlorine.github.io/master/favicon.ico">
+        <link rel="shortcut icon" href="https://raw.githubusercontent.com/OneChlorine/OneChlorine.github.io/master/favicon.ico">
         <title>OneChlorine's Personal Repositories</title>
         <meta charset="utf-8"/>
     </head>
