--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
         <meta charset="utf-8"/>
     </head>
     <body>
-        <h1>Here, you will find something interesting. (Although There is nothing here.😁) If I have some items in the future, I will create a direct link on this page.</h1> 
+        <h1>Here, you will find something interesting. (Although There is nothing here.😁) If I have some items in the future, I will create a direct link of it on this page.</h1> 
         <p>Nothing here right now! Haha! Because I have no items at present! But it doesn't mean that I won't have my own repositories later.</p>
         <p>Expecting my future repositories.</p>
         <p>(By the way, this is my email address: <a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com</a>.)</p>
         <p>(You can also visit my Upperclassman's homepage of GitHub (<a href="https://aarwoo.github.io" target="_blank">https://aarwoo.github.io</a>) via my homepage. And my personal information homepage on GitHub: <a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a>.)</p>
         <p>(Last...Hum...I like watching animations, ESPECIALLY <i>GG Bond</i>. Aha!😂)</p>
         <a href="GP/GP.html"><img src="GP.png"/></a>
+        <p>（如果你看不懂英文，请单击<a href="zh-cn/index.html" target="_blank">这里</a>。）</p>
         <p>©OneChlorine 2020</p>
     </body>
 </html>
