--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -11,7 +11,7 @@
         <p>现在这里什么都没有！哈哈！因为我现在没有任何项目！但这并不意味着我以后都不会拥有我自己的仓库。</p>
         <p>期待我以后的仓库。</p>
         <p>（顺便说一下，这是我的电子邮件地址：<a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com</a>。）</p>
-        <p>（你同样可以通过我的主页来访问我学哥的GitHub主页：（<a href="https://aarwoo.github.io" target="_blank">https://aarwoo.github.io</a>）还有我在GitHub上的个人信息主页：<a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a>。）</p>
+        <p>（你同样可以通过我的主页来访问我学哥的GitHub主页：（<a href="https://aarwoo.github.io" target="_blank">https://aarwoo.github.io</a>）。还有我在GitHub上的个人信息主页：<a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a>。）</p>
         <p>（最后......呃......我喜欢看动画片，尤其是<b>猪猪侠</b>。啊哈！😂）</p>
         <a href="GP/GP.html"><img src="GP.png"/></a>
         <p>©OneChlorine 2020</p>
