--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -14,7 +14,7 @@
         <p>（你同样可以通过我的主页来访问我学哥的GitHub主页：（<a href="https://aarwoo.github.io" target="_blank">https://aarwoo.github.io</a>）。还有我在GitHub上的个人信息主页：<a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a>。）</p>
         <p>（最后......呃......我喜欢看动画片，尤其是<b>猪猪侠</b>。啊哈！😂）</p>
         <a href="GP/GP.html"><img src="GP.png"/></a>
-        <p>(Click <a href="https://onechlorine.github.io" target="_blank">here</a> to visit the English edition.</p>
+        <p>(Click <a href="https://onechlorine.github.io" target="_blank">here</a> to visit the English edition.)</p>
         <p>©OneChlorine 2020</p>
     </body>
 </html>
