--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8"/>
     </head>
     <body>
-        <h1>你将会于此发现些有趣的东西。（虽然这里什么也没有。😁）如果我以后有了一些仓库，我将会于此界面创建其直链。</h1> 
+        <h1>你将会于此发现些有趣的东西。（虽然这里什么都没有。😁）如果我以后有了一些仓库，我将会于此界面创建其直链。</h1> 
         <p>现在这里什么都没有！哈哈！因为我现在没有任何项目！但这并不意味着我以后都不会拥有我自己的仓库。</p>
         <p>期待我以后的仓库。</p>
         <p>（顺便说一下，这是我的电子邮件地址：<a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com</a>。）</p>
