--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8"/>
     </head>
     <body>
-        <h1>You will find something interesting here. (Although There is nothing here.😁) If I will have some items in the future, I will create direct-links of them on this page.</h1> 
+        <h1>You will find something interesting here. (Although There is nothing here.😁) If I have some items in the future, I will create direct-links of them on this page.</h1> 
         <p>Nothing here right now! Haha! Because I have no items at present! But it doesn't mean that I won't have my own repositories later.</p>
         <p>Expecting my future repositories.</p>
         <p>(By the way, this is my email address: <a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com</a>.)</p>
