--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="icon" href="https://raw.githubusercontent.com/OneChlorine/OneChlorine.github.io/master/favicon.ico">
         <link rel="shortcut icon" href="https://raw.githubusercontent.com/OneChlorine/OneChlorine.github.io/master/favicon.ico">
         <title>OneChlorine's Personal Repositories</title>
+        <p>In the view of the special environment of Chinese network, I advise you to prepare a "ladder" by yourself and surf the Internet scientifically. But if you are not live in China or you can log on to GitHub fleetly by yourself, it is unnecessary for you.</p>
         <meta charset="utf-8"/>
     </head>
     <body>
