--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -4,6 +4,7 @@
         <link rel="icon" href="https://raw.githubusercontent.com/OneChlorine/OneChlorine.github.io/master/favicon.ico">
         <link rel="shortcut icon" href="https://raw.githubusercontent.com/OneChlorine/OneChlorine.github.io/master/favicon.ico">
         <title>OneChlorine的个人仓库</title>
+        <p>（鉴于中国特殊的网络环境，我建议你自备梯子科学上网。但如果你没有住在中国或你登录GitHub本身就很快，那么这对你而言是不必要的。）</p>
         <meta charset="utf-8"/>
     </head>
     <body>
