--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         <p>Expecting my future repositories.</p>
         <p>(By the way, this is my email address: <a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com</a>.)</p>
         <p>(You can also visit my Upperclassman's homepage of GitHub (<a href="https://aarwoo.github.io" target="_blank">https://aarwoo.github.io</a>) via my homepage. And my personal information homepage on GitHub: <a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a>.)</p>
-        <p>(Last...Hum...I like watching animations, ESPECIALLY <i>GG Bond</i>. Aha!😂)</p>
+        <p>(Last...Hum...I like watching animations, ESPECIALLY <b>GG Bond</b>. Aha!😂)</p>
         <a href="GP/GP.html"><img src="GP.png"/></a>
+        <p>(DO NOT use the image above for commercial use!)</p>
         <p>（如果你看不懂英文，请单击<a href="zh-cn/index.html" target="_blank">这里</a>。）</p>
         <p>©OneChlorine 2020</p>
     </body>
