--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
     <head>
         <link rel="icon" href="https://raw.githubusercontent.com/OneChlorine/OneChlorine.github.io/master/favicon.ico">
         <link rel="shortcut icon" href="https://raw.githubusercontent.com/OneChlorine/OneChlorine.github.io/master/favicon.ico">
-        <title>OneChlorine's Personal Repositories</title>
+        <title>OneChlorine's Personal Homepage</title>
         <meta charset="utf-8"/>
     </head>
     <body>
         <h1>You will find something interesting here. (Although There is nothing here.😁) If I have some items in the future, I will create direct-links of them on this page.</h1> 
-        <p>Nothing here right now! Haha! Because I have no items at present! But it doesn't mean that I won't have my own repositories later.</p>
-        <p>Expecting my future repositories.</p>
-        <p>(By the way, this is my email address: <a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com</a>.)</p>
-        <p>(You can also visit my Upperclassman's homepage of GitHub (<a href="https://aarwoo.github.io" target="_blank">https://aarwoo.github.io</a>) via my homepage. And my personal information homepage on GitHub: <a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a>.)</p>
+        <p>Please expecting my future items...</p>
+        <p>(You can also visit my Upperclassman's homepage of GitHub (<a href="https://aarwoo.github.io" target="_blank">https://aarwoo.github.io</a>) via this homepage. And my personal information homepage on GitHub: <a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a>.)</p>
         <p>(Last...Hum...I like watching animations, ESPECIALLY <b>GG Bond</b>. Aha!😂)</p>
         <a href="GP/GP.html"><img src="GP.png"/></a>
-        <p>（如果你看不懂英文，请单击<a href="zh-cn/index.html" target="_blank">这里</a>。）</p>
+        <p>(My email address: <a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com</a>.)</p>
+        <p>Some links: <a href="https://www.huawei.com">Huawei</a> <a href="https://www.intel.com">Intel</a> <a href="https://www.amd.com">AMD</a> <a href="https://www.nvidia.com">Nvidia</a> <a href="https://www.zol.com.cn">ZOL</a> <a href="https://www.github.com">GitHub</a> <a href="https://www.microsoft.com">Microsoft</a> <a href="https://www.apple.com">Apple</a> <a href="https://www.qualcomm.com">Qualcomm</a></p>
+        <p>（如果你看不懂英文，请单击<a href="zh-cn/index.html" target="_blank">此处</a>。）</p>
     </body>
 </html>
