--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -3,16 +3,16 @@
     <head>
         <link rel="icon" href="https://raw.githubusercontent.com/OneChlorine/OneChlorine.github.io/master/favicon.ico">
         <link rel="shortcut icon" href="https://raw.githubusercontent.com/OneChlorine/OneChlorine.github.io/master/favicon.ico">
-        <title>OneChlorine的个人仓库</title>
+        <title>OneChlorine的个人主页</title>
         <meta charset="utf-8"/>
     </head>
     <body>
-        <h1>你将会于此发现些有趣的东西。（虽然这里什么都没有。😁）如果我以后有了一些仓库，我将会于此页面创建其直链。</h1> 
-        <p>现在这里什么都没有！哈哈！因为我现在没有任何项目！但这并不意味着我以后都不会拥有我自己的仓库。</p>
-        <p>期待我以后的仓库。</p>
-        <p>（顺便说一下，这是我的电子邮件地址：<a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com</a>。）</p>
-        <p>（你同样可以通过我的主页来访问我学哥的GitHub主页：（<a href="https://aarwoo.github.io" target="_blank">https://aarwoo.github.io</a>）。还有我在GitHub上的个人信息主页：<a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a>。）</p>
+        <h1>你将会于此发现些有趣的东西。（虽然这里什么都没有。😁）如果我以后有了一些项目，我将会于此页面创建其直链。</h1> 
+        <p>期待我未来的项目吧......</p>
+        <p>（你同样可以通过此主页来访问我学哥的GitHub主页：（<a href="https://aarwoo.github.io" target="_blank">https://aarwoo.github.io</a>）。还有我在GitHub上的个人信息主页：<a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a>。）</p>
         <p>（最后......呃......我喜欢看动画片，尤其是<b>猪猪侠</b>。啊哈！😂）</p>
         <a href="GP/GP.html"><img src="GP.png"/></a>
+        <p>（我的电子邮件地址：<a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com</a>。）</p>
+        <p>部分链接：<a href="https://www.huawei.com">华为</a> <a href="https://www.intel.com">Intel（英特尔）</a> <a href="https://www.amd.com">AMD</a> <a href="https://www.nvidia.com">Nvidia（英伟达）</a> <a href="https://www.zol.com.cn">中关村</a> <a href="https://www.github.com">GitHub</a> <a href="https://www.microsoft.com">Microsoft（微软）</a> <a href="https://www.apple.com">Apple（苹果）</a> <a href="https://www.qualcomm.com">高通</a></p>
     </body>
 </html>
