--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>(Last...Hum...I like watching animations, ESPECIALLY <b>GG Bond</b>. Aha!😂)</p>
         <a href="GP/GP.html"><img src="GP.png"/></a>
         <p>(My email address: <a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com</a>.)</p>
-        <p>Some links: <a href="https://www.huawei.com">Huawei</a> <a href="https://www.intel.com">Intel</a> <a href="https://www.amd.com">AMD</a> <a href="https://www.nvidia.com">Nvidia</a> <a href="https://www.zol.com.cn">ZOL</a> <a href="https://www.github.com">GitHub</a> <a href="https://www.microsoft.com">Microsoft</a> <a href="https://www.apple.com">Apple</a> <a href="https://www.qualcomm.com">Qualcomm</a> <a href="https://www.oppo.com">OPPO</a> <a href="https://www.vivo.com">vivo</a> <a href="https://mi.com">MI(Xiaomi)</a> <a href="https://www.oneplus.com">OnePlus</a></p>
+        <p>Some links: <a href="https://www.huawei.com">Huawei</a> <a href="https://www.intel.com">Intel</a> <a href="https://www.amd.com">AMD</a> <a href="https://www.nvidia.com">Nvidia</a> <a href="https://www.zol.com.cn">ZOL</a> <a href="https://www.github.com">GitHub</a> <a href="https://www.microsoft.com">Microsoft</a> <a href="https://www.apple.com">Apple</a> <a href="https://www.qualcomm.com">Qualcomm</a> <a href="https://www.oppo.com">OPPO</a> <a href="https://www.vivo.com">vivo</a> <a href="https://www.mi.com">MI(Xiaomi)</a> <a href="https://www.oneplus.com">OnePlus</a></p>
         <p>（如果你看不懂英文，请单击<a href="zh-cn/index.html" target="_blank">此处</a>。）</p>
     </body>
 </html>
