--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -13,6 +13,6 @@
         <p>（最后......呃......我喜欢看动画片，尤其是<b>猪猪侠</b>。啊哈！😂）</p>
         <a href="GP/GP.html"><img src="GP.png"/></a>
         <p>（我的电子邮件地址：<a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com</a>。）</p>
-        <p>部分链接：<a href="https://www.huawei.com">华为</a> <a href="https://www.intel.com">Intel（英特尔）</a> <a href="https://www.amd.com">AMD</a> <a href="https://www.nvidia.com">Nvidia（英伟达）</a> <a href="https://www.zol.com.cn">中关村</a> <a href="https://www.github.com">GitHub</a> <a href="https://www.microsoft.com">Microsoft（微软）</a> <a href="https://www.apple.com">Apple（苹果）</a> <a href="https://www.qualcomm.com">高通</a> <a href="https://www.oppo.com">OPPO</a> <a href="https://www.vivo.com">vivo</a> <a href="https://mi.com">小米</a> <a href="https://www.oneplus.com">OnePlus（一加）</a></p>
+        <p>部分链接：<a href="https://www.huawei.com">华为</a> <a href="https://www.intel.com">Intel（英特尔）</a> <a href="https://www.amd.com">AMD</a> <a href="https://www.nvidia.com">Nvidia（英伟达）</a> <a href="https://www.zol.com.cn">中关村</a> <a href="https://www.github.com">GitHub</a> <a href="https://www.microsoft.com">Microsoft（微软）</a> <a href="https://www.apple.com">Apple（苹果）</a> <a href="https://www.qualcomm.com">高通</a> <a href="https://www.oppo.com">OPPO</a> <a href="https://www.vivo.com">vivo</a> <a href="https://www.mi.com">小米</a> <a href="https://www.oneplus.com">OnePlus（一加）</a></p>
     </body>
 </html>
