--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
         <p>(My email address: <a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com</a>.)</p>
         <p>Some links: <a href="https://www.huawei.com" target="_blank">Huawei</a> <a href="https://www.intel.com" target="_blank">Intel</a> <a href="https://www.amd.com" target="_blank">AMD</a> <a href="https://www.nvidia.com" target="_blank">Nvidia</a> <a href="https://www.zol.com.cn" target="_blank">ZOL</a> <a href="https://www.github.com" target="_blank">GitHub</a> <a href="https://www.microsoft.com" target="_blank">Microsoft</a> <a href="https://www.apple.com" target="_blank">Apple</a> <a href="https://www.qualcomm.com" target="_blank">Qualcomm</a> <a href="https://www.oppo.com" target="_blank">OPPO</a> <a href="https://www.vivo.com" target="_blank">vivo</a> <a href="https://www.mi.com" target="_blank">MI(Xiaomi)</a> <a href="https://www.oneplus.com" target="_blank">OnePlus</a></p>
         <p>（如果你看不懂英文，请单击<a href="zh-cn/index.html" target="_blank">此处</a>。）</p>
+        <p>©OneChlorine 2020</p>
     </body>
 </html>
