--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>You will find something interesting here. (Although There is nothing here.😁) If I have some items in the future, I will create direct-links of them on this page.</h1> 
         <p>Please expecting my future items...</p>
-        <p>(You can also visit my personal information homepage on GitHub: <a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a> via this homepage.)</p>
+        <p>(You can also visit my personal information homepage on GitHub (<a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a>) via this homepage.)</p>
         <p>(Last...Hum...I like watching animations, ESPECIALLY <b>GG Bond</b>. Aha!😂)</p>
         <a href="GP/GP.html"><img src="GP.png"/></a>
         <p>(My email address: <a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com</a>.)</p>
