--- a/GP/GP.html
+++ b/GP/GP.html
@@ -8,6 +8,6 @@
     <body>
         <h1>ATTENTION! The following contents are pure fiction!</h1>
         <h1>(Once upon a time, there were two person: GG Bond and Phoebe Hwa. They were the couple.)</h1>
-        <p>It seems that they were the couple naturally and the "fact" was accepted by the public. "NO PDA" is invaild for G and P. For them, locking lips each other and PDA are usual. Super Q, Bobby and Sdaddy also eat the "dogfood" every once in a while. Even someone think that the couple have made a love. (Oh My God)</p>
+        <p>It seems that they were the couple naturally and the "fact" was accepted by the public. "NO PDA" is invalid for G and P. For them, locking lips each other and PDA are usual. Super Q, Bobby and Sdaddy also eat the "dogfood" every once in a while. Even someone think that the couple have made a love. (Oh My God)</p>
     </body>
 </html>
