--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>You will find something interesting here. (Although There is nothing here.😁) If I have some items in the future, I will create direct-links of them on this page.</h1> 
-        <p>Please expecting my future items...</p>
+        <p>Please expect my future items...</p>
         <p>(You can also visit my personal information homepage on GitHub (<a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a>) via this homepage.)</p>
         <p>(Last...Hum...I like watching animations, ESPECIALLY <b>GG Bond</b>. Aha!😂)</p>
         <a href="GP/GP.html"><img src="GP.png"/></a>
