--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -11,7 +11,7 @@
         <p>期待我未来的项目吧......</p>
         <p>（你同样可以通过此主页来访问我在GitHub上的个人信息主页：<a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a>。）</p>
         <p>（最后......呃......我喜欢看动画片，尤其是<b>猪猪侠</b>。啊哈！😂）</p>
-        <img src="GP.png"/>
+        <img src="GP.svg"/>
         <p>（我的电子邮件地址：<a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com</a>。）</p>
         <p>部分链接：<a href="https://www.huawei.com/cn" target="_blank">华为</a> <a href="https://www.intel.cn" target="_blank">英特尔</a> <a href="https://www.amd.com" target="_blank">AMD</a> <a href="https://www.nvidia.cn" target="_blank">英伟达</a> <a href="https://www.zol.com.cn" target="_blank">中关村</a> <a href="https://www.github.com" target="_blank">GitHub</a> <a href="https://www.microsoft.com" target="_blank">微软</a> <a href="https://www.apple.com.cn" target="_blank">苹果</a> <a href="https://www.qualcomm.cn" target="_blank">高通</a> <a href="https://www.oppo.com" target="_blank">OPPO</a> <a href="https://www.vivo.com" target="_blank">vivo</a> <a href="https://www.mi.com" target="_blank">小米</a> <a href="https://www.oneplus.com" target="_blank">一加</a></p>
         <p>©2020 OneChlorine</p>
