--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>You will find something interesting here. (Although There is nothing here.😁) If I have some items in the future, I will create direct-links of repositories which contain them on this page.</h1>
         <p>Please expect my future items...</p>
-        <p>(You can also visit my personal information homepage on GitHub (<a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a>) via this page.)</p>
+        <p>(You can also visit (<a href="https://github.com/onechlorine" target="_blank">my personal information homepage</a>) on GitHub via this page.)</p>
         <p>(Last...Hum...I like watching animations, ESPECIALLY <b>GG Bond</b>. Aha!😂)</p>
         <img src="GP.png"/>
         <p>(My email address: <a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com</a>.)</p>
