--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>你将会于此发现些有趣的东西。（虽然这里什么都没有。😁）如果我以后有了一些项目，我将会于此页面创建包含这些项目的仓库的直链。</h1>
         <p>期待我未来的项目吧......</p>
-        <p>（你同样可以通过此主页来访问我在GitHub上的个人信息主页：<a href="https://github.com/onechlorine" target="_blank">https://github.com/onechlorine</a>。）</p>
+        <p>（你同样可以通过此主页来访问我在GitHub上的<a href="https://github.com/onechlorine" target="_blank">个人信息主页</a>。）</p>
         <p>（最后......呃......我喜欢看动画片，尤其是<b>猪猪侠</b>。啊哈！😂）</p>
         <img src="GP.png"/>
         <p>（我的电子邮件地址：<a href="mailto:feizhenyang123@gmail.com">feizhenyang123@gmail.com</a>。）</p>
